--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
 asgiref==3.7.2
+astroid==2.15.8
+dill==0.3.7
 Django==4.2.5
 et-xmlfile==1.1.0
+gunicorn==21.2.0
+isort==5.12.0
+lazy-object-proxy==1.9.0
+mccabe==0.7.0
 openpyxl==3.1.2
+packaging==23.2
+platformdirs==3.11.0
+pylint==2.17.7
+pylint-django==2.5.3
+pylint-plugin-utils==0.8.2
 sqlparse==0.4.4
+tomlkit==0.12.1
+wrapt==1.15.0
