--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ mccabe==0.7.0
 openpyxl==3.1.2
 packaging==23.2
 platformdirs==3.11.0
+psycopg2-binary==2.9.9
 pylint==2.17.7
 pylint-django==2.5.3
 pylint-plugin-utils==0.8.2
